# Feedback

./: .gitignore  .pre-commit-config.yaml  LICENSE.md
.github/workflows/: demo.yml  drone.yml
app/backend/: .flake8  pyproject.toml
app/backend/django/apps/base/: middleware.py  models.py
app/backend/django/apps/feedback/: admin.py  models.py  serializers.py  urls.py  views.py
app/backend/django/apps/feedback/migrations/: 0001_initial.py  0002_feedback_company_name_feedback_sender_name_and_more.py
app/backend/django/apps/feedback/tests/: test_views.py  utils.py
app/backend/django/config/: settings.py  urls.py
app/backend/django/config/api/: urls.py
app/backend/django/config/api/v1/: urls.py
app/backend/django/logs/: filters.py
app/backend/docs/: README.md
app/frontend/react/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/react/src/: App.tsx
app/frontend/react/src/components/: CreatePost.tsx  FeedbackSection.tsx  Header.tsx  PostCard.tsx  ProfileCard.tsx
app/frontend/react/src/types/: index.ts
backend/: .flake8  Dockerfile  pyproject.toml
backend/django/apps/base/: models.py
backend/django/apps/feedback/: models.py
backend/django/apps/feedback/migrations/: 0001_initial.py
backend/django/config/: settings.py
docs/: README.md
