[project]
name = "dependencies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "django>=5.2.6",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "ruff>=0.12.12",
]

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true


[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
]


[tool.ruff.lint]
select = [
    "E",  
    "F",  
    "W",
    "I",  
    "B",  
    "UP", 
    "SIM", 
    "E4"
]
ignore = []
